# libtimefreeze

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  build.sh  docker_test.sh  run_example.sh  run_tests.sh
ci/: Dockerfile
example/: example.c
example/gtest_example/: CMakeLists.txt
examples/gtest_example/: CMakeLists.txt
examples/gtest_example/src/: test_time.cpp
examples/simple/: CMakeLists.txt
src/: libtimefreeze.c
tests/: CMakeLists.txt
tests/src/: data.h  test_env_var_unset.cpp  test_frozen_time.cpp  test_time_without_libtimefreeze.cpp  test_unsupported_calls.cpp
